--- a/css/style.css
+++ b/css/style.css
@@ -362,3 +362,7 @@ footer a {
     text-decoration: underline;
 }
 
+@font-face {
+    font-family: 'Roboto-Black';
+    src: url('/project/fonts/Roboto-Black.eot');
+}
